--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,21 @@
-// Your styles go here
+@import "nav.scss";
+
+// Website Colors
+$primary1: #0d6efd;
+$primary2: #FFF;
+$primary3:rgba(255, 255, 255, .4);
+$primary4: #333;
+$primary5: #303030;
+
+/*Text stuff*/
+$font-f:'Roboto Condensed', sans-serif;
+$font-size: 0.8em;
+$font-w: 300;
+
+// Imports
+
+
+/*main styling*/
 body {
   background: #202020 url('/images/footer-bg.jpg') repeat;
   min-width: 1200px;
@@ -11,7 +28,7 @@ input,
 textarea,
 select {
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
+  font-weight: $font-w;
   font-size: 11pt;
   line-height: 1.75em;
 }
@@ -24,7 +41,7 @@ h5,
 h6 {
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: $font-w;
 }
 
 h1 a,
@@ -49,19 +66,19 @@ i {
 }
 
 a {
-  color: #0d6efd;
+  color: $primary1;
 }
 
 sub {
   position: relative;
   top: 0.5em;
-  font-size: 0.8em;
+  font-size: $font-size;
 }
 
 sup {
   position: relative;
   top: -0.5em;
-  font-size: 0.8em;
+  font-size: $font-size;
 }
 
 hr {
@@ -120,220 +137,178 @@ footer {
   margin-top: 1em;
 }
 
+// container nesting
+
 .container {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
+
+  .container.small {
+    width: 900px;
+  }
+
+  .container.big {
+    width: 100%;
+    max-width: 1500px;
+    min-width: 1200px;
+  }
+
+  .row section,
+  .row article {
+    margin-bottom: 0;
+  }
+
+  .row [class*='column-'] {
+    padding: 50px 0 0 50px;
+    float: left;
+    box-sizing: border-box;
+  }
+
+  .row {
+    margin-left: -50px;
+  }
+
+  .row:after {
+    content: '';
+    display: block;
+    clear: both;
+    height: 0;
+  }
 }
 
-.container.small {
-  width: 900px;
+// Mixins
+@mixin make-column {
+  $width: 100%;
 }
 
-.container.big {
-  width: 100%;
-  max-width: 1500px;
-  min-width: 1200px;
-}
 
-.row section,
-.row article {
-  margin-bottom: 0;
-}
-
-.row [class*='column-'] {
-  padding: 50px 0 0 50px;
-  float: left;
-  box-sizing: border-box;
-}
-
-.row {
-  margin-left: -50px;
-}
-
-.row:after {
-  content: '';
-  display: block;
-  clear: both;
-  height: 0;
-}
-
-.column-1,
-.column-2,
-.column-3,
-.column-4,
-.column-5,
-.column-6,
-.column-7.column-8,
-.column-9,
-.column-10,
-.column-11,
-.column-12 {
-  width: 100%;
-}
 
 @media all and (min-width: 576px) {
-  .column-1 {
-    width: 8.33333%;
-  }
-
-  .column-2 {
-    width: 16.66667%;
-  }
-
-  .column-3 {
-    width: 25%;
-  }
-
-  .column-4 {
-    width: 33.33333%;
-  }
-
-  .column-5 {
-    width: 41.66667%;
-  }
-
-  .column-6 {
-    width: 50%;
-  }
-
-  .column-7 {
-    width: 58.33333%;
-  }
-
-  .column-8 {
-    width: 66.66667%;
-  }
-
-  .column-9 {
-    width: 75%;
-  }
-
-  .column-10 {
-    width: 83.33333%;
-  }
-
-  .column-11 {
-    width: 91.66667%;
-  }
-
-  .column-12 {
-    width: 100%;
+  /* column stuff */
+  @for $i from 1 through 12{
+    $width1: (100% / 12) * $i;
+    
+    .column-#{$i} {
+      width: $width1;
+    }
   }
 }
+
+/*image nesting*/
 
 .image {
   display: inline-block;
-}
 
-.image img {
-  display: block;
-  width: 100%;
-}
+  .image img {
+    display: block;
+    width: 100%;
+  }
 
-.image.featured {
-  display: block;
-  width: 100%;
-  margin: 0 0 2em 0;
-}
+  .image.featured {
+    display: block;
+    width: 100%;
+    margin: 0 0 2em 0;
+  }
 
-.image.full {
-  display: block;
-  width: 100%;
-  margin-bottom: 2em;
-}
+  .image.full {
+    display: block;
+    width: 100%;
+    margin-bottom: 2em;
+  }
 
-.image.left {
-  float: left;
-  margin: 0 2em 2em 0;
-}
+  .image.left {
+    float: left;
+    margin: 0 2em 2em 0;
+  }
 
-.image.centered {
-  display: block;
-  margin: 0 0 2em 0;
-}
+  .image.centered {
+    display: block;
+    margin: 0 0 2em 0;
+  }
 
-.image.centered img {
-  margin: 0 auto;
-  width: auto;
+  .image.centered img {
+    margin: 0 auto;
+    width: auto;
+  }
 }
 
 ul.default {
   margin: 0;
   padding: 0;
   list-style: none;
-}
 
-ul.default li {
-  display: block;
-  padding: 2em 0em 1.25em 0em;
-  border-top: 1px solid #303030;
-}
+  ul.default li {
+    display: block;
+    padding: 2em 0em 1.25em 0em;
+    border-top: 1px solid $primary5;
+  }
 
-ul.default li:first-child {
-  padding-top: 0em;
-  border-top: none;
-}
+  ul.default li:first-child {
+    padding-top: 0em;
+    border-top: none;
+  }
 
-ul.default a {
-  text-decoration: none;
-  color: rgba(255, 255, 255, .5);
-}
+  ul.default a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, .5);
+  }
 
-ul.default a:hover {
-  text-decoration: underline;
-}
+  ul.default a:hover {
+    text-decoration: underline;
+  }
 
-ul.style1 {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  ul.style1 {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
 
-ul.style1 li {
-  padding: 0.60em 0em;
-  border-top: 1px solid;
-  border-color: rgba(0, 0, 0, .1);
-}
+  ul.style1 li {
+    padding: 0.60em 0em;
+    border-top: 1px solid;
+    border-color: rgba(0, 0, 0, .1);
+  }
 
-ul.style1 li:first-child {
-  padding-top: 0;
-  border-top: 0;
-}
+  ul.style1 li:first-child {
+    padding-top: 0;
+    border-top: 0;
+  }
 
-ul.style2 {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  ul.style2 {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
 
-ul.style2 li {
-  padding: 1.90em 0em 1.60em 0em;
-  border-top: 1px solid;
-  border-color: rgba(0, 0, 0, .1);
-}
+  ul.style2 li {
+    padding: 1.90em 0em 1.60em 0em;
+    border-top: 1px solid;
+    border-color: rgba(0, 0, 0, .1);
+  }
 
-ul.style2 li:first-child {
-  padding-top: 0;
-  border-top: 0;
-}
+  ul.style2 li:first-child {
+    padding-top: 0;
+    border-top: 0;
+  }
 
-ul.style2 img {
-  float: left;
-  padding-right: 1em;
-}
+  ul.style2 img {
+    float: left;
+    padding-right: 1em;
+  }
 
-ul.style5 {
-  overflow: hidden;
-  margin: 0em 0em 1em 0em;
-  padding: 0em;
-  list-style: none;
-}
+  ul.style5 {
+    overflow: hidden;
+    margin: 0em 0em 1em 0em;
+    padding: 0em;
+    list-style: none;
+  }
 
-ul.style5 li {
-  float: left;
-  padding: 0.25em 0.25em;
-  line-height: 0;
+  ul.style5 li {
+    float: left;
+    padding: 0.25em 0.25em;
+    line-height: 0;
+  }
 }
 
 .button {
@@ -341,92 +316,57 @@ ul.style5 li {
   display: inline-block;
   margin-top: 0.5em;
   padding: 0.50em 1.5em;
-  background: #0d6efd;
+  background: $primary1;
   border-radius: 6px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 1.1em;
-  color: #FFF;
+  color: $primary2;
   transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
   cursor: pointer;
 }
 
 .button:hover {
-  background: #0d6efd;
-  color: #FFF !important;
+  background: $primary1;
+  color: $primary2 !important;
 }
 
+/*more nesting*/
 .header {
   position: relative;
-  background: #FFF;
-}
+  background: $primary2;
 
-.header .container {
-  position: relative;
-  padding: 4em 0em;
+  .header .container {
+    position: relative;
+    padding: 4em 0em;
+  }
 }
 
 .logo {
   position: absolute;
   left: 0em;
   top: 3em;
+
+  .logo a {
+    display: block;
+    text-decoration: none;
+    font-size: 2.8em;
+    font-weight: 600;
+  }
 }
 
-.logo a {
-  display: block;
-  text-decoration: none;
-  font-size: 2.8em;
-  font-weight: 600;
-}
-
-.nav {
-  position: absolute;
-  right: 0em;
-  top: 2.2em;
-}
-
-.nav ul {
-  list-style-type: none;
-}
-
-.nav ul li {
-  float: left;
-}
-
-.nav ul li:last-child {
-  padding-right: 0;
-}
-
-.nav ul li a,
-.nav ul li span {
-  display: block;
-  margin-left: 0.7em;
-  padding: 0.80em 1.2em;
-  letter-spacing: 0.06em;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.1em;
-  outline: 0;
-  color: #333;
-}
-
-.nav li.active a {
-  background: #0d6efd;
-  border-radius: 5px;
-  color: #FFF;
-}
 
 .banner {
   position: relative;
   padding: 12em 0em;
   background: url('/images/banner.jpg') no-repeat center;
   background-size: cover;
-  color: #fff;
+  color: $primary2;
 }
 
 .page {
   position: relative;
-  background: #fff;
+  background: $primary2;
 }
 
 .main {
@@ -438,33 +378,34 @@ ul.style5 li {
   font-size: 1.6em;
 }
 
+// footer nesting
 .footer {
   position: relative;
-  color: rgba(255, 255, 255, .4);
-}
+  color: $primary3;
 
-.footer h2 {
-  padding-bottom: 1.5em;
-  font-size: 1.6em;
-  color: #FFF;
-}
+  .footer h2 {
+    padding-bottom: 1.5em;
+    font-size: 1.6em;
+    color: $primary2;
+  }
 
-.footer strong {
-  color: rgba(255, 255, 255, .7);
+  .footer strong {
+    color: rgba(255, 255, 255, .7);
+  }
 }
 
 .copyright {
   position: relative;
   padding: 3em 0em;
-  border-top: 1px solid #303030;
+  border-top: 1px solid $primary5;
   letter-spacing: 1px;
   text-align: center;
-  color: rgba(255, 255, 255, .4);
+  color: $primary3;
 }
 
 .copyright a {
   text-decoration: none;
-  color: rgba(255, 255, 255, .4) !important;
+  color: $primary3 !important;
 }
 
 .marketing {
@@ -477,17 +418,17 @@ ul.style5 li {
 
 .featured {
   position: relative;
-}
 
-.featured .divider {
-  border-bottom: 1px solid #303030;
-}
+  .featured .divider {
+    border-bottom: 1px solid $primary5;
+  }
 
-.featured .box {
-  background: #FFF;
-  padding: 1.4em;
-  font-size: 0.95em;
-  border-radius: 5px;
+  .featured .box {
+    background: $primary2;
+    padding: 1.4em;
+    font-size: 0.95em;
+    border-radius: 5px;
+  }
 }
 
 .balloon {
@@ -496,13 +437,13 @@ ul.style5 li {
   border-radius: 5px;
   line-height: 180%;
   font-size: 1.2em;
-  color: #333;
-}
+  color: $primary4;
 
-.ballon-bgbtm {
-  height: 1.87em;
-}
+  .ballon-bgbtm {
+    height: 1.87em;
+  }
 
-.balloon strong {
-  color: #333 !important;
+  strong {
+    color: $primary4 !important;
+  }
 }
